# simple-ecg-II

./: CMakeLists.txt  README.md  main.c
lib/: easyavr.h  u8g2callback.c  u8g2callback.h
